@@ -74,17 +74,8 @@ class XAPIAN_VISIBILITY_DEFAULT SimpleStopper : public Stopper {
      * @endcode
      *
      */
-#if ! defined __SUNPRO_CC || __SUNPRO_CC - 0 >= 0x580
     template <class Iterator>
     SimpleStopper(Iterator begin, Iterator end) : stop_words(begin, end) { }
-#else
-    // Older versions of Sun's C++ compiler don't cope with the Iterator
-    // pointing to const char *.
-    template <class Iterator>
-    SimpleStopper(Iterator begin, Iterator end) {
-	while (begin != end) stop_words.insert(*begin++);
-    }
-#endif
 
     /// Add a single stop word.
     void add(const std::string & word) { stop_words.insert(word); }
