@@ -45,11 +45,6 @@
 #define XAPIAN_TCPSRV XAPIAN_BIN_PATH"xapian-tcpsrv"
 #define XAPIAN_PROGSRV XAPIAN_BIN_PATH"xapian-progsrv"
 
-#if defined __SUNPRO_CC && __SUNPRO_CC - 0 < 0x580
-// Older versions of Sun's CC appears to need this to compile this file.
-class Xapian::WritableDatabase;
-#endif
-
 class BackendManager {
     /// The current data directory
     std::string datadir;
