@@ -1,3 +1,9 @@
+Thu Apr 30 14:26:13 GMT 2015  Olly Betts <olly@survex.com>
+
+	* api/omdatabase.cc,include/xapian/queryparser.h,
+	  tests/harness/backendmanager.h: Drop workarounds for ancient Sun
+	  C++ compilers, as we now require a recent version for C++11 support.
+
 Thu Apr 30 14:22:46 GMT 2015  Olly Betts <olly@survex.com>
 
 	* INSTALL: IRIX is past EOL so drop information about IRIX make.
